hphp/hack/test/typecheck/reactive/mutability_inout3.php.exp
File "mutability_inout3.php", line 7, characters 12-40:
`__Mutable`, `__MaybeMutable` and `__OwnedMutable` annotations are not allowed on inout parameters. (Parsing[1002])
