hphp/hack/test/typecheck/reactive/mutability_inout3.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class A {}

<<__Rx>>
function f(<<__OwnedMutable>> inout A $a): void {
}
